# WFI

./: .gitignore  CMakeLists.txt  README.md
include/WFI/: lexer.hh  token.hh
src/: ast.cpp  evaluator.cpp  fletchlang.txt  lexer.cpp  main.cpp  object.cpp  parser.cpp  repl.cpp  token.cpp
tests/: ast_test.cpp  evaluator_test.cpp  lexer_test.cpp  object_test.cpp  parser_test.cpp
